# UWUChat

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml  build.zig  build.zig.zon  flake.nix
src/: cli_client.c  client.c  lib.c  server.c
src/devDocs/: example.c
